# easyiso

./: .env.dist  .gitignore  Cargo.toml  Makefile  build.rs  docker-compose.yaml  package-lock.json  package.json  tailwind.config.js
docker/app/: Dockerfile  dev.Dockerfile  prod.Dockerfile
migrations/: init.sql
migrations/2024-09-06-215308_base/: up.sql
migrations/2024-09-17-163454_create_schema/: up.sql
src/: auth.rs  container.rs  db.rs  main.rs  models.rs  repositories.rs  repository.rs  routes.rs  schema.rs  templates.rs  types.rs
src/domain/: entities.rs  repositories.rs
src/routes/: certification.rs  dashboard.rs  index.rs  login.rs  mod.rs
src/services/: repositories.rs
static/css/: style.css
templates/: base.html.j2  base.j2  certification_details.html.j2  checklists_demo.html.j2  dashboard.html.j2  dashboard.html.tera  dashboard.j2  error.html.tera  index.html.j2  index.html.tera  index.j2  login.html.j2  login.html.tera  login.j2
templates/components/: dashboard.html.tera  error.html.tera  login.html.tera
