[package]
name = "easyiso"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["macros"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres", "default"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde = "1.0.204"
sha2 = { version = "0.10.8", features = ["std", "sha2-asm"] }
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tower-sessions = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
