[package]
name = "easyiso"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_cli = "2.2.4"
dotenv = "0.15.0"
lazy_static = "1.5.0"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.210", features = ["derive"] }
